# rummage

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml
assets/: app.js  styles-directions.css  tokens.css
src/: assets.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  server.rs
src/api/: attachment.rs  message.rs  mod.rs  search.rs  senders.rs  stats.rs  tags.rs  thread.rs
src/mail/: body.rs  mod.rs  parser.rs
src/mcp/: error.rs  mod.rs  prompts.rs  resources.rs  tests.rs  tools.rs  util.rs
src/ui/: home.rs  mod.rs  search.rs  thread.rs
