[package]
name = "rummage"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime & HTTP
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UI framework — server-side rendering now; native/desktop later via same components
dioxus = { version = "0.7", default-features = false, features = ["html", "macro", "signals"] }
dioxus-ssr = "0.7"

# notmuch bindings
notmuch = "0.8"

# Email parsing (pure Rust)
mail-parser = "0.11"

# HTML sanitization (pure Rust)
ammonia = "4"

# URL detection in plain text
linkify = "0.10"

# CLI & config
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
regex = "1"
chrono = "0.4"
walkdir = "2"
html-escape = "0.2"

# MIME type guessing for attachments
mime_guess = "2"

# URL encoding for query parameters
urlencoding = "2"

# MCP server
rmcp = { version = "1.5", features = ["server", "transport-streamable-http-server"] }
schemars = "1.0"
tokio-util = { version = "0.7", features = ["rt"] }
base64 = "0.22"

# Metrics (Prometheus text format)
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Document text extraction
batdoc-core = { git = "https://github.com/daemonp/batdoc" }

